// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeView renders challenge with at least one move and the last move indicator 1`] = `
<DocumentFragment>
  <div
    data-testid="challenge"
  >
    <div
      class="challenge-wrapper"
    >
      <div
        class="challenge-board"
      >
        <div
          style="display: grid; grid-template-columns: repeat(10, 1fr); grid-template-rows: repeat(10, 1fr); position: relative;"
        >
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="indicatorLastMove indicatorInner cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="indicatorLastMove indicatorInner cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="indicatorLastMove indicatorInner cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <img
            alt="Black Queen"
            src="/images/bqueen.png"
            style="left: 30%; top: 0%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="Black Queen"
            src="/images/bqueen.png"
            style="left: 60%; top: 0%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="Burnt Off Square"
            src="/images/fire.png"
            style="left: 30%; top: 10%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="White Queen"
            src="/images/wqueen.png"
            style="left: 60%; top: 10%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="Black Queen"
            src="/images/bqueen.png"
            style="left: 0%; top: 30%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="Black Queen"
            src="/images/bqueen.png"
            style="left: 90%; top: 30%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="White Queen"
            src="/images/wqueen.png"
            style="left: 0%; top: 60%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="White Queen"
            src="/images/wqueen.png"
            style="left: 90%; top: 60%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="White Queen"
            src="/images/wqueen.png"
            style="left: 30%; top: 90%; position: absolute; width: 10%; height: 10%;"
          />
        </div>
      </div>
      <div
        class="challenge-dashboard"
      >
        <div
          style="width: 100%;"
        >
          <div
            class="challenge-dashboard-player challenge-dashboard-player-hasTurn"
            style="display: flex; align-content: center; text-align: center; align-items: center;"
          >
            <div
              style="max-width: 30px; max-height: 30px; margin-right: 5px;"
            >
              <img
                alt="Black Queen Piece"
                src="/images/bqueen.png"
                style="width: 100%; height: 100%;"
              />
            </div>
            <span
              class="player-tag"
            >
              Guest #zochGd8
            </span>
          </div>
          <div
            style="max-height: 11em; overflow: auto; display: flex; flex-direction: column-reverse; font-family: monospace; padding: 1em;"
          >
            <div>
              <div
                style="display: flex; align-content: center; text-align: center; align-items: center;"
              >
                1.
                <div
                  style="max-width: 22px; max-height: 22px; margin-right: 4px;"
                />
                <span>
                  G10-G2/D2
                </span>
              </div>
            </div>
          </div>
          <div
            style="text-align: center; display: block; margin: 1em;"
          />
          <div
            class="challenge-dashboard-player"
            style="display: flex; align-content: center; text-align: center; align-items: center;"
          >
            <div
              style="max-width: 30px; max-height: 30px; margin-right: 5px;"
            >
              <img
                alt="White Queen Piece"
                src="/images/wqueen.png"
                style="width: 100%; height: 100%;"
              />
            </div>
            <span
              class="player-tag"
            >
              Guest #T6A8IVn
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChallengeView renders challenge with challenge data 1`] = `
<DocumentFragment>
  <div
    data-testid="challenge"
  >
    <div
      class="challenge-wrapper"
    >
      <div
        class="challenge-board"
      >
        <div
          style="display: grid; grid-template-columns: repeat(10, 1fr); grid-template-rows: repeat(10, 1fr); position: relative;"
        >
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <div
            class="cellLight"
          />
          <div
            class="cellDark"
          />
          <img
            alt="Black Queen"
            src="/images/bqueen.png"
            style="left: 30%; top: 0%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="Black Queen"
            src="/images/bqueen.png"
            style="left: 60%; top: 0%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="Black Queen"
            src="/images/bqueen.png"
            style="left: 0%; top: 30%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="Black Queen"
            src="/images/bqueen.png"
            style="left: 90%; top: 30%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="White Queen"
            src="/images/wqueen.png"
            style="left: 0%; top: 60%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="White Queen"
            src="/images/wqueen.png"
            style="left: 90%; top: 60%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="White Queen"
            src="/images/wqueen.png"
            style="left: 30%; top: 90%; position: absolute; width: 10%; height: 10%;"
          />
          <img
            alt="White Queen"
            src="/images/wqueen.png"
            style="left: 60%; top: 90%; position: absolute; width: 10%; height: 10%;"
          />
        </div>
      </div>
      <button>
        Join!
      </button>
      <div
        class="challenge-dashboard"
      >
        <div
          style="width: 100%;"
        >
          <div
            class="challenge-dashboard-player"
            style="display: flex; align-content: center; text-align: center; align-items: center;"
          >
            <div
              style="max-width: 30px; max-height: 30px; margin-right: 5px;"
            >
              <img
                alt="Black Queen Piece"
                src="/images/bqueen.png"
                style="width: 100%; height: 100%;"
              />
            </div>
            <span
              class="player-tag"
            >
              Waiting for opponent...
            </span>
          </div>
          <div
            style="text-align: center; display: block; margin: 1em;"
          >
            <em>
              Waiting for players to join...
            </em>
          </div>
          <div
            class="challenge-dashboard-player challenge-dashboard-player-hasTurn"
            style="display: flex; align-content: center; text-align: center; align-items: center;"
          >
            <div
              style="max-width: 30px; max-height: 30px; margin-right: 5px;"
            >
              <img
                alt="White Queen Piece"
                src="/images/wqueen.png"
                style="width: 100%; height: 100%;"
              />
            </div>
            <span
              class="player-tag"
            >
              Guest #T6A8IVn
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
